# whytype

./: .gitignore  CHANGELOG.md  INSTALL.md  README.md  WhyType.spec  build.py  install.bat  install.sh  pyproject.toml  requirements.txt  uninstall.bat  uninstall.sh
.github/workflows/: build.yml
scripts/: build_whispercpp.py  package.py
whytype/: __init__.py  __main__.py  app.py  config.py  logger.py  models.py  recorder.py  typer.py
whytype/assets/: icon.icns
whytype/engine/: __init__.py  base.py  whispercpp_engine.py
whytype/ui/: settings_dialog.py
